[package]
name = "integ"
version = "0.1.0"
authors = ["jd <jean.daniel.michaud@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.0"
serde_yaml = "0.8"
structopt = "0.3.22"
anyhow = "1.0.13"
tokio-threadpool = "0.1.18"
futures = "0.3.15"
pathdiff = "0.2.1"
